k8s/demo-project/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
        - name: api
          image: vajo/k8s-demo-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
