k8s/demo-project/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-frontend
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
        - name: frontend
          image: vajo/k8s-demo-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
