k8s/demo-project/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-service
spec:
  type: NodePort
  selector:
    app: demo-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
