k8s/demo-project/frontend_servce.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend-service
spec:
  type: ClusterIP
  selector:
    app: demo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
