k8s/demo-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-project-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: laurinwindhaus.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demo-api-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-frontend-service
                port:
                  number: 80
